--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "web",
+  "name": "student",
   "version": "0.0.1",
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
+    "dev": "dotenv -e ../../.env -- next dev --turbopack -p 3000",
+    "build": "dotenv -e ../../.env -- next build",
+    "start": "dotenv -e ../../.env -- next start -p 3000",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@workspace/ui": "workspace:*",
+    "@workspace/db": "workspace:*",
+    "@workspace/auth": "workspace:*",
     "lucide-react": "^0.475.0",
     "next": "^15.2.3",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -25,6 +28,7 @@
     "@types/react-dom": "^19",
     "@workspace/eslint-config": "workspace:^",
     "@workspace/typescript-config": "workspace:*",
+    "dotenv-cli": "^8.0.0",
     "typescript": "^5.7.3"
   }
 }
