--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
-    "next-auth": "5.0.0-beta.28"
+    "next-auth": "5.0.0-beta.28",
+    "@workspace/db": "workspace:*",
+    "drizzle-orm": "^0.44.2"
   },
   "devDependencies": {
     "dotenv": "^16.5.0"
