--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -12,15 +12,19 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@workspace/auth": "workspace:*",
     "@workspace/db": "workspace:*",
     "@workspace/ui": "workspace:*",
+    "framer-motion": "^12.19.1",
     "lucide-react": "^0.475.0",
     "next": "^15.2.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.58.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20",
