--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -12,6 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@workspace/ui": "workspace:*",
     "@workspace/db": "workspace:*",
     "@workspace/auth": "workspace:*",
@@ -20,7 +21,9 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.58.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20",
