--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -13,25 +13,26 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
-    "@workspace/ui": "workspace:*",
+    "@tanstack/react-table": "^8.21.3",
     "@workspace/db": "workspace:*",
-    "@workspace/auth": "workspace:*",
+    "@workspace/ui": "workspace:*",
+    "framer-motion": "^12.22.0",
     "lucide-react": "^0.475.0",
-    "next": "^15.2.3",
-    "next-auth": "^4.24.11",
-    "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.58.1",
-    "zod": "^3.24.2"
+    "next": "^15.3.4",
+    "next-auth": "5.0.0-beta.29",
+    "next-themes": "^0.4.6",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.59.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^20.19.4",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@workspace/eslint-config": "workspace:^",
     "@workspace/typescript-config": "workspace:*",
     "dotenv-cli": "^8.0.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.3"
   }
 }
