--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "type": "module",
   "private": true,
+  "exports": {
+    ".": "./index.ts",
+    "./schema": "./schema.ts",
+    "./drizzle": "./drizzle.ts"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --max-warnings 0",
@@ -17,13 +22,14 @@
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
-    "drizzle-orm": "^0.44.2"
+    "drizzle-orm": "^0.44.2",
+    "drizzle-zod": "^0.8.2"
   },
   "devDependencies": {
+    "@workspace/eslint-config": "workspace:*",
+    "@workspace/typescript-config": "workspace:*",
     "dotenv": "^16.5.0",
     "drizzle-kit": "^0.31.1",
-    "typescript": "^5.7.3",
-    "@workspace/eslint-config": "workspace:*",
-    "@workspace/typescript-config": "workspace:*"
+    "typescript": "^5.7.3"
   }
 }
