--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
+    "start": "turbo start",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "db:check": "pnpm --filter @workspace/db check",
     "db:generate": "pnpm --filter @workspace/db generate",
