--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -12,10 +12,12 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@tailwindcss/postcss": "^4.0.8",
     "@tanstack/react-table": "^8.21.3",
     "@workspace/db": "workspace:*",
     "@workspace/ui": "workspace:*",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.22.0",
     "lucide-react": "^0.475.0",
     "next": "^15.3.4",
@@ -23,6 +25,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.59.0",
     "tailwindcss": "^4.0.8",
     "zod": "^3.25.67"
   },
