--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-table": "^8.21.3",
     "@workspace/db": "workspace:*",
     "@workspace/ui": "workspace:*",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.22.0",
     "lucide-react": "^0.475.0",
     "next": "^15.3.4",
