--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:studio": "pnpm --filter @workspace/db studio"
   },
   "devDependencies": {
+    "@eslint/js": "^9.32.0",
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
     "prettier": "^3.6.2",
