--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -28,6 +28,7 @@
     "next": "^15.3.4",
     "next-auth": "5.0.0-beta.29",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.59.0",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.19.4",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@workspace/eslint-config": "workspace:^",
