--- a/apps/admin/Dockerfile
+++ b/apps/admin/Dockerfile
@@ -56,7 +56,10 @@ RUN adduser --system --uid 1001 nextjs
 # Copy the standalone output
 COPY --from=builder /app/apps/admin/.next/standalone ./
 COPY --from=builder /app/apps/admin/.next/static ./apps/admin/.next/static
-COPY --from=builder /app/apps/admin/public ./apps/admin/public
+
+# Create and copy public directory
+RUN mkdir -p ./apps/admin/public
+COPY --from=builder /app/apps/admin/public/ ./apps/admin/public/
 
 # Set the correct permission for prerender cache
 RUN mkdir .next
