--- a/.dockerignore
+++ b/.dockerignore
@@ -1,67 +1,55 @@
-# Dependencies
-node_modules
+# === Dependencies ===
+node_modules/
+.pnp
+.pnp.js
+jspm_packages/
+
+# Package manager files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+pnpm-lock.yaml
+yarn.lock
+package-lock.json
+.yarn-integrity
 
-# Production builds
+# pnpm specific
+.pnpm-store/
+.pnpm-debug.log*
+
+# === Build outputs ===
 .next/
 out/
 dist/
 build/
 
-# Environment files
+# Next.js specific
+.next
+.swc/
+
+# Nuxt.js
+.nuxt
+
+# Storybook
+.out
+.storybook-out
+
+# === Environment files ===
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
+!.env.example
+docker.env
 
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# OS files
-.DS_Store
-Thumbs.db
-
-# Git
-.git
-.gitignore
-
-# Docker
-Dockerfile*
-docker-compose*
-.dockerignore
-
-# Logs
-logs
-*.log
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage/
-*.lcov
-
-# nyc test coverage
-.nyc_output
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
+# === Cache directories ===
+.cache/
+.parcel-cache/
+.npm/
 .eslintcache
+.stylelintcache
+
+# TypeScript cache
+*.tsbuildinfo
 
 # Microbundle cache
 .rpt2_cache/
@@ -69,36 +57,71 @@ jspm_packages/
 .rts2_cache_es/
 .rts2_cache_umd/
 
-# Optional REPL history
+# === Development tools ===
+.turbo/
+.vercel/
+coverage/
+*.lcov
+.nyc_output/
+
+# Testing
+__tests__/__snapshots__/
+
+# === IDE and editor files ===
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# === OS files ===
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# === Version control ===
+.git/
+.gitignore
+.gitattributes
+
+# === Docker files ===
+Dockerfile*
+docker-compose*
+.dockerignore
+
+# === Logs and runtime data ===
+logs/
+*.log
+pids/
+*.pid
+*.seed
+*.pid.lock
 .node_repl_history
 
-# Output of 'npm pack'
+# === Package outputs ===
 *.tgz
+*.tar.gz
 
-# Yarn Integrity file
-.yarn-integrity
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# Next.js build output
-.next
-
-# Nuxt.js build / generate output
-.nuxt
-dist
-
-# Storybook build outputs
-.out
-.storybook-out
-
-# Temporary folders
+# === Temporary folders ===
 tmp/
 temp/
 
-# Turbo
-.turbo
+# === Database ===
+*.db
+*.sqlite
+*.sqlite3
 
-# Vercel
-.vercel
+# Drizzle
+drizzle/
+
+# === Uploads and user content ===
+shared/uploads/
+uploads/
+**/uploads/
+
+# === Miscellaneous ===
+.cursorignore
