--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "dotenv -e ../../.env -- next dev --turbopack -p 9000",
-    "build": "dotenv -e ../../.env -- next build",
-    "start": "dotenv -e ../../.env -- next start -p 9000",
+    "build": "dotenv -e ../../.env -- next build && cp -r .next/static .next/standalone/apps/student/.next/static && cp -r public .next/standalone/apps/student/public",
+    "start": "PORT=9000 dotenv -e ../../.env -- node .next/standalone/apps/student/server.js",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "typecheck": "tsc --noEmit"
